--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -38,7 +38,6 @@
     position: relative;
     display: grid;
     grid-template-rows: 200px 1fr;
-
 }
 
 .hero::before{
@@ -49,8 +48,10 @@
     width: 100%;
     height: 100%;
     background-size: cover;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    background-image: url('../img/fondo.jpg');
+    clip-path: polygon(0 0, 100% 0, 72% 100%, 28% 100%);
     z-index: -1;
+    filter: blur(6px);
 }
 
 
@@ -140,16 +141,145 @@
     justify-self: center;
     padding: 13px 30px;
     background-image: url('../img/google.svg');
-    width: 145px;
-    height: 45px;
+    width: 140px;
+    height: 47px;
 }
 
 .cta{
     display: inline-block;
-    background-color: darkblue;
+    background-color: grey;
     justify-self: center;
     color: white;
     text-decoration: none;
     padding: 13px 30px;
     border-radius: 32px;
+}
+
+------------------------
+
+.title{
+    font-size: 1rem;
+    font-family:'Outfit';
+}
+
+.funciones{
+    background-color: #f0f1f4;
+    content: "";
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-size: cover;
+    z-index: -1;
+}
+
+.function{
+    position: relative;
+    text-align: center;
+    height: auto;
+}
+
+.subtitle{
+    color: var(--color-title);
+    font-family:'Outfit';
+    font-size: 2rem;
+    margin-bottom: 25px;
+    padding-top: 25px;
+}
+
+title{
+    font-family:'Outfit';
+    font-size: 2rem;
+}
+.function__paragraph{
+    font-family: 'Hepta Slab';
+    font-size: 1rem;
+}
+
+.about__function{
+    padding-top: 40px;
+    display: grid;
+    width: 100%;
+    margin: 0 auto;
+    gap: 1em;
+    overflow: hidden;
+    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+}
+
+.function__icons{
+    display: grid;
+    gap: 1em;
+    justify-items: center;
+    width: 260px;
+    overflow: hidden;
+    margin: 0 auto;
+    border-radius: 20px;
+}
+
+.about_diagrama{
+    background-size: cover;
+    width: 80%;
+    justify-self: center;
+}
+
+.function__container{
+    padding-top: 50px;
+    max-width: 800px;
+    display: grid;
+    --padding-container: 0;
+    display: grid;
+    grid-auto-rows: max-content;
+    align-content: center;
+    gap: 1em;
+    padding-bottom: 100px;
+    text-align: center;
+}
+
+------------------------
+
+.planes_title{
+    font-family:'Outfit';
+}
+
+.planes{
+    background-color: #f0f1f4;
+    content: "";
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-size: cover;
+}
+
+.planes{
+    position: relative;
+    text-align: center;
+    height: auto;
+}
+
+.about__planes{
+    padding-top: 40px;
+    display: grid;
+    width: 100%;
+    margin: 0 auto;
+    gap: 1em;
+    overflow: hidden;
+    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+}
+
+.about__planes:last-of-type{
+    grid-column: 1/-1;
+}
+
+.cuadro_planes{
+    display: grid;
+    gap: 2em;
+    border: 12px;
+    justify-items: center;
+    width: 300px;
+    overflow: hidden;
+    margin: 0 auto;
+    background-color: #f4f4f4;
 }
