--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -163,7 +163,7 @@
 }
 
 .funciones{
-    background-color: #f0f1f4;
+    background-color: white;
     content: "";
     position: relative;
     top: 0;
@@ -282,4 +282,63 @@ title{
     overflow: hidden;
     margin: 0 auto;
     background-color: #f4f4f4;
+}
+---------------------
+.marcas{
+    background-color: #f0f1f4;
+    content: "";
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-size: cover;
+}
+
+.marcas{
+    position: relative;
+    text-align: center;
+    height: auto;
+}
+
+---------------------------------
+.foot{
+    font-size: 16px;
+    color: white;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.barfooter {
+    background-color: #1e1e1e;
+    padding: 30px 0px;
+}
+
+.media {
+    display: flex;
+    column-gap: 20px;
+}
+.social-icon {
+    width: 30px;
+    height: 30px;
+}
+
+.social-icon{
+    height: 40px;
+    width: 40px;
+    transition: 0.2s ease-in;
+}
+
+.social-icon:hover {
+    transform: scale(1.2);
+    transition: 0.2s ease-in;
+
+}
+
+.footlink {
+    font-size: 16px;
+    color: white;
 }
